test/success/integration/_succ_lexpr_1.hs
main = do
       let y :: Int; y = 3; x :: [Int]; x = [1,2]
       print "hello"