test/fail/integration/_fail_sem_lexpr_1.hs
main = do
       let y :: Int; y = 3; x :: [Int]; x = [1,'c']
       print "hello"